# custom_mwclient

./: .gitignore  LICENSE  README.md  pyproject.toml
src/custom_mwclient/: __init__.py  errors.py  wiki_authentication.py  wiki_client.py  wiki_content_error.py  wiki_error.py
src/custom_mwclient/clients/: fandom_client.py  wikigg_client.py
