[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_mwclient"
dynamic = ["version"]
dependencies = [
    "mwclient~=0.11",
    "requests~=2.32",
]
requires-python = ">=3.9"

[tool.setuptools_scm]
